--- a/halo/payment.html
+++ b/halo/payment.html
@@ -98,13 +98,13 @@
           <div id="confirmation">
             <div class="confirmation__summary sub-section">
               <h2 class="sub-header">Tóm tắt đơn hàng</h2>
-              <p class="summary__row summary__row--right inner-header">Giỏ hàng</p>
-              <p class="summary__row"><span class="summary__row--right">Máy ảnh Canon 1DX Mark III </span><span class="summary__row--left">1 x 130.090.000đ = 130.090.000đ</span></p>
-              <p class="summary__row"><span class="summary__row--right">Máy ảnh Canon 1DX Mark III </span><span class="summary__row--left">2 x 130.090.000đ = 260.180.000đ</span></p>
-              <p class="summary__row"><span class="summary__row--right inner-header">Tổng giá trị giỏ hàng </span><span class="summary__row--left">390.270.000đ</span></p>
-              <div class="summary__row"><span class="summary__row--right inner-header">Phí vận chuyển:</span><span class="summary__row--left">Miễn phí vận chuyển</span></div>
-              <div class="summary__row"><span class="summary__row--right inner-header">Mã giảm giá:</span>
-                <div class="summary__row--left coupon">
+              <p class="summary__row summary__row--left inner-header">Giỏ hàng</p>
+              <p class="summary__row"><span class="summary__row--left">Máy ảnh Canon 1DX Mark III </span><span class="summary__row--right">1 x 130.090.000đ = 130.090.000đ</span></p>
+              <p class="summary__row"><span class="summary__row--left">Máy ảnh Canon 1DX Mark III </span><span class="summary__row--right">2 x 130.090.000đ = 260.180.000đ</span></p>
+              <p class="summary__row"><span class="summary__row--left inner-header">Tổng giá trị giỏ hàng </span><span class="summary__row--right">390.270.000đ</span></p>
+              <div class="summary__row"><span class="summary__row--left inner-header">Phí vận chuyển:</span><span class="summary__row--right">Miễn phí vận chuyển</span></div>
+              <div class="summary__row"><span class="summary__row--left inner-header">Mã giảm giá:</span>
+                <div class="summary__row--right coupon">
                   <input class="coupon__input" type="text" placeholder="KM2021">
                   <div class="coupon__content">
                     <p class="coupon__text">Giảm 15% giá trị đơn hàng (tối đa 1.000.000đ)</p>
