--- a/halo/payment.html
+++ b/halo/payment.html
@@ -114,7 +114,7 @@
               </div>
               <p class="summary__grand-total inner-header text-center my-4">Tổng tiền hàng: <span>390.270.000đ</span></p>
             </div>
-            <p>Khi bấm xác nhận, quý khách đã đồng ý với <span class="term-toggler text-primary font-italic" data-toggle="collapse" data-target="#term">các điều khoản đặt hàng và thanh toán của chúng tôi.</span></p>
+            <p class="text-center">Khi bấm xác nhận, quý khách đã đồng ý với <span class="term-toggler text-primary font-italic" data-toggle="collapse" data-target="#term">các điều khoản đặt hàng và thanh toán của chúng tôi.</span></p>
             <div class="confirmation__term sub-section collapse" id="term"> 
               <h2 class="sub-header">Điều khoản đặt hàng và thanh toán</h2>
               <p>1. Quý khách hàng vui lòng cung cấp địa chỉ giao hàng cũng như thông tin người nhận rõ ràng, chính xác để công tác giao hàng được nhanh nhất.</p>
