--- a/halo/payment.html
+++ b/halo/payment.html
@@ -114,8 +114,8 @@
               </div>
               <p class="summary__grand-total inner-header text-center my-4">Tổng tiền hàng: <span>390.270.000đ</span></p>
             </div>
-            <p class="text-center">Khi bấm xác nhận, quý khách đã đồng ý với <span class="term-toggler text-primary font-italic" data-toggle="collapse" data-target="#term">các điều khoản đặt hàng và thanh toán của chúng tôi.</span></p>
-            <div class="confirmation__term sub-section collapse" id="term"> 
+            <p class="term-toggler__wrapper text-center">Khi bấm xác nhận, quý khách đã đồng ý với <span class="term-toggler text-primary font-italic" data-toggle="collapse" data-target="#term">các điều khoản đặt hàng và thanh toán của chúng tôi.</span></p>
+            <div class="confirmation__term sub-section" id="term">
               <h2 class="sub-header">Điều khoản đặt hàng và thanh toán</h2>
               <p>1. Quý khách hàng vui lòng cung cấp địa chỉ giao hàng cũng như thông tin người nhận rõ ràng, chính xác để công tác giao hàng được nhanh nhất.</p>
               <p>2. Quý khách hàng kiểm tra hàng hóa kỹ lưỡng, cẩn thận trước khi ký nhận và thanh toán.</p>
@@ -134,7 +134,7 @@
                 <input class="guess__info--phone form-control" type="text" placeholder="Số điện thoại">
                 <input class="guess__info--address form-control" type="text" placeholder="Địa chỉ nhận hàng">
                 <textarea class="guess__info--note form-control" name="" cols="20" rows="10" placeholder="Ghi chú"></textarea>
-              </form><a class="btn btn--confirmation payment__toggler" href="#" data-toggle="collapse" data-target="#payment__method">Xác nhận </a>
+              </form><a class="btn btn--confirmation payment__toggler" href="#method-wrapper" data-toggle="collapse" data-target="#payment__method">Xác nhận </a>
             </div>
             <div class="sub-section collapse" id="payment__method">
               <h2 class="sub-header">Phương thức thanh toán</h2>
