--- a/halo/payment.html
+++ b/halo/payment.html
@@ -112,7 +112,7 @@
                   </div>
                 </div>
               </div>
-              <p class="summary__grand-total inner-header text-center my-4">Tổng tiền hàng: <span>390.270.000đ</span></p>
+              <p class="summary__grand-total inner-header text-center">Tổng tiền hàng: <span>390.270.000đ</span></p>
             </div>
             <p class="term-toggler__wrapper text-center">Khi bấm xác nhận, quý khách đã đồng ý với <span class="term-toggler text-primary font-italic" data-toggle="collapse" data-target="#term">các điều khoản đặt hàng và thanh toán của chúng tôi.</span></p>
             <div class="confirmation__term sub-section" id="term">
@@ -121,11 +121,11 @@
               <p>2. Quý khách hàng kiểm tra hàng hóa kỹ lưỡng, cẩn thận trước khi ký nhận và thanh toán.</p>
               <p>3. Nếu quá thời gian quy định, Quý khách hàng vẫn chưa nhận được sản phẩm, hãy liên lạc ngay với chúng tôi để được hỗ trợ.</p>
               <p>4. Trường hợp Quý khách hàng thay đổi quyết định mua hàng khi sản phẩm đã được giao, khách hàng sẽ phải chịu hoàn toàn chi phí vận chuyển.</p>
-            </div><a class="btn btn--confirmation payment__toggler mt-4" href="#" data-toggle="collapse" data-target="#payment__info">Xác nhận</a>
+            </div><a class="btn btn--confirmation payment__toggler" href="#payment__header" data-toggle="collapse" data-target="#payment__info">Xác nhận</a>
           </div>
         </section>
         <section class="payment-wrapper">
-          <div class="main-header"><span class="main-header__text">2. Thanh toán</span><span class="main-header__indicator"></span></div>
+          <div class="main-header" id="payment__header"><span class="main-header__text">2. Thanh toán</span><span class="main-header__indicator"></span></div>
           <div id="payment">
             <div class="sub-section collapse" id="payment__info">
               <h2 class="sub-header">Thông tin khách hàng</h2>
@@ -146,7 +146,7 @@
                   </div>
                   <div class="method__content collapse" id="domestic-card" data-parent="#methods-selection">
                     <div class="payment-card__content"> 
-                      <div class="front"> <img class="payment-card__chip" src="/halo/img/img--payment/chip.png" alt=""><img class="payment-card__brands" src="/halo/img/img--payment/vcb-logo.png" alt="">
+                      <div class="front"> <img class="payment-card__chip" src="/halo/img/img--payment/chip.png" alt=""><img class="payment-card__brands" src="/halo/img/img--payment/vcb-logo-1.png" alt="">
                         <p class="front__num display-value">0000 0000 0000 0000</p>
                         <p class="front__valid-text">VALID DATES</p>
                         <p class="front__valid-dates"><span class="front__month display-value">MM</span><span>&nbsp;/&nbsp;</span><span class="front__year display-value">YY</span></p>
