--- a/halo/payment.html
+++ b/halo/payment.html
@@ -158,7 +158,7 @@
                         <div class="form-group">
                           <label for="bank">Chọn ngân hàng:&nbsp;</label>
                           <select class="form-control" id="input__bank">
-                            <option>VCB (Vietcombank)</option>
+                            <option>VCB (Ngân hàng TMCP Ngoại thương Việt Nam)</option>
                             <option>BIDV (Ngân hàng Đầu tư và Phát triển Việt Nam)</option>
                           </select>
                         </div>
