--- a/halo/payment.html
+++ b/halo/payment.html
@@ -114,8 +114,41 @@
               </div>
               <p class="summary__grand-total inner-header text-center">Tổng tiền hàng: <span>390.270.000đ</span></p>
             </div>
+            <div class="faq sub-section">
+              <h2 class="sub-header">Đặt hàng &#38; thanh toán: câu hỏi thường gặp</h2>
+              <div class="faq__item"> 
+                <p class="faq__item--question" data-toggle="collapse" data-target="#answer1"> <span>Chi phí vận chuyển tính như thế nào?</span><span>+</span></p>
+                <ul class="faq__item--answer collapse" id="answer1">
+                  <li>- Với các đơn hàng có bao gồm sản phẩm máy ảnh và ống kính bất kỳ: HALO sẽ miễn phí vận chuyển, áp dụng trên phạm vi toàn quốc.</li>
+                  <li>- Với các đơn hàng chỉ bao gồm phụ kiện: HALO sẽ miễn phí vận chuyển với các đơn hàng có tổng giá từ 500.000đ trở lên, áp dụng trên phạm vi toàn quốc.</li>
+                  <li>- Với các trường hợp còn lại, phí vận chuyển tính như sau: nội thành Hà Nội: 20.000đ, địa điểm khác: 50.000đ.</li>
+                </ul>
+              </div>
+              <div class="faq__item"> 
+                <p class="faq__item--question" data-toggle="collapse" data-target="#answer2"> <span>Thời gian giao hàng là bao lâu?</span><span>+</span></p>
+                <ul class="faq__item--answer collapse" id="answer2"> 
+                  <li>- Hà Nội, TP.HCM: Giao hàng trong vòng 2 ngày</li>
+                  <li>- Các khu vực khác: Giao hàng trong vòng 2 - 5 ngày</li>
+                </ul>
+              </div>
+              <div class="faq__item"> 
+                <p class="faq__item--question" data-toggle="collapse" data-target="#answer3"> <span>Tôi có thể lấy mã giảm giá từ đâu?</span><span>+</span></p>
+                <ul class="faq__item--answer collapse" id="answer3"> 
+                  <li>- Theo dõi các chương trình tặng mã giảm giá trên các nền tảng xã hội của HALO như&nbsp;  <a href="#">Facebook&nbsp; </a><a href="#">Instagram&nbsp;</a>và&nbsp;<a href="#">Youtube </a></li>
+                  <li>- Các bài viết quảng bá trên các trang tin tức cũng sẽ có mã giảm giá (số lượng có hạn)</li>
+                  <li>- Mua hàng tại HALO và tích điểm để đổi mã giảm giá</li>
+                </ul>
+              </div>
+              <div class="faq__item"> 
+                <p class="faq__item--question" data-toggle="collapse" data-target="#answer4"> <span>Wait, the Earth is flat?</span><span>-</span></p>
+                <ul class="faq__item--answer collapse show" id="answer4"> 
+                  <li>- Always has been.</li>
+                </ul>
+              </div>
+              <h3>Các câu hỏi khác cần tư vấn, vui lòng liên hệ hotline: 012.345.6789</h3>
+            </div>
             <p class="term-toggler__wrapper text-center">Khi bấm xác nhận, quý khách đã đồng ý với <span class="term-toggler text-primary font-italic" data-toggle="collapse" data-target="#term">các điều khoản đặt hàng và thanh toán của chúng tôi.</span></p>
-            <div class="confirmation__term sub-section" id="term">
+            <div class="confirmation__term sub-section collapse" id="term">
               <h2 class="sub-header">Điều khoản đặt hàng và thanh toán</h2>
               <p>1. Quý khách hàng vui lòng cung cấp địa chỉ giao hàng cũng như thông tin người nhận rõ ràng, chính xác để công tác giao hàng được nhanh nhất.</p>
               <p>2. Quý khách hàng kiểm tra hàng hóa kỹ lưỡng, cẩn thận trước khi ký nhận và thanh toán.</p>
