--- a/halo/payment.html
+++ b/halo/payment.html
@@ -117,7 +117,7 @@
             <div class="faq sub-section">
               <h2 class="sub-header">Đặt hàng &#38; thanh toán: câu hỏi thường gặp</h2>
               <div class="faq__item"> 
-                <p class="faq__item--question" data-toggle="collapse" data-target="#answer1"> <span>Chi phí vận chuyển tính như thế nào?</span><span>+</span></p>
+                <p class="faq__item--question" data-toggle="collapse" data-target="#answer1"> <span>Chi phí vận chuyển tính như thế nào?</span><span> <i class="fas fa-plus"></i></span></p>
                 <ul class="faq__item--answer collapse" id="answer1">
                   <li>- Với các đơn hàng có bao gồm sản phẩm máy ảnh và ống kính bất kỳ: HALO sẽ miễn phí vận chuyển, áp dụng trên phạm vi toàn quốc.</li>
                   <li>- Với các đơn hàng chỉ bao gồm phụ kiện: HALO sẽ miễn phí vận chuyển với các đơn hàng có tổng giá từ 500.000đ trở lên, áp dụng trên phạm vi toàn quốc.</li>
@@ -125,14 +125,14 @@
                 </ul>
               </div>
               <div class="faq__item"> 
-                <p class="faq__item--question" data-toggle="collapse" data-target="#answer2"> <span>Thời gian giao hàng là bao lâu?</span><span>+</span></p>
+                <p class="faq__item--question" data-toggle="collapse" data-target="#answer2"> <span>Thời gian giao hàng là bao lâu?</span><span> <i class="fas fa-plus"></i></span></p>
                 <ul class="faq__item--answer collapse" id="answer2"> 
                   <li>- Hà Nội, TP.HCM: Giao hàng trong vòng 2 ngày</li>
                   <li>- Các khu vực khác: Giao hàng trong vòng 2 - 5 ngày</li>
                 </ul>
               </div>
               <div class="faq__item"> 
-                <p class="faq__item--question" data-toggle="collapse" data-target="#answer3"> <span>Tôi có thể lấy mã giảm giá từ đâu?</span><span>+</span></p>
+                <p class="faq__item--question" data-toggle="collapse" data-target="#answer3"> <span>Tôi có thể lấy mã giảm giá từ đâu?</span><span> <i class="fas fa-plus"></i></span></p>
                 <ul class="faq__item--answer collapse" id="answer3"> 
                   <li>- Theo dõi các chương trình tặng mã giảm giá trên các nền tảng xã hội của HALO như&nbsp;  <a href="#">Facebook&nbsp; </a><a href="#">Instagram&nbsp;</a>và&nbsp;<a href="#">Youtube </a></li>
                   <li>- Các bài viết quảng bá trên các trang tin tức cũng sẽ có mã giảm giá (số lượng có hạn)</li>
@@ -140,21 +140,21 @@
                 </ul>
               </div>
               <div class="faq__item"> 
-                <p class="faq__item--question" data-toggle="collapse" data-target="#answer4"> <span>Wait, the Earth is flat?</span><span>-</span></p>
+                <p class="faq__item--question" data-toggle="collapse" data-target="#answer4"> <span>Wait, the Earth is flat?</span><span> <i class="fas fa-minus"></i></span></p>
                 <ul class="faq__item--answer collapse show" id="answer4"> 
-                  <li>- Always has been.</li>
+                  <li class="font-weight-bold">- Always has been.</li>
                 </ul>
               </div>
-              <h3>Các câu hỏi khác cần tư vấn, vui lòng liên hệ hotline: 012.345.6789</h3>
+              <h3 class="text-center">Các câu hỏi khác cần tư vấn, vui lòng liên hệ hotline: 012.345.6789</h3>
             </div>
-            <p class="term-toggler__wrapper text-center">Khi bấm xác nhận, quý khách đã đồng ý với <span class="term-toggler text-primary font-italic" data-toggle="collapse" data-target="#term">các điều khoản đặt hàng và thanh toán của chúng tôi.</span></p>
-            <div class="confirmation__term sub-section collapse" id="term">
+            <p class="term-toggler__wrapper text-center">Khi bấm xác nhận, quý khách đã đồng ý với <span class="term-toggler text-primary font-italic" data-toggle="collapse" data-target=".confirmation__term">các điều khoản đặt hàng và thanh toán của chúng tôi.</span></p>
+            <div class="confirmation__term sub-section collapse">
               <h2 class="sub-header">Điều khoản đặt hàng và thanh toán</h2>
               <p>1. Quý khách hàng vui lòng cung cấp địa chỉ giao hàng cũng như thông tin người nhận rõ ràng, chính xác để công tác giao hàng được nhanh nhất.</p>
               <p>2. Quý khách hàng kiểm tra hàng hóa kỹ lưỡng, cẩn thận trước khi ký nhận và thanh toán.</p>
               <p>3. Nếu quá thời gian quy định, Quý khách hàng vẫn chưa nhận được sản phẩm, hãy liên lạc ngay với chúng tôi để được hỗ trợ.</p>
               <p>4. Trường hợp Quý khách hàng thay đổi quyết định mua hàng khi sản phẩm đã được giao, khách hàng sẽ phải chịu hoàn toàn chi phí vận chuyển.</p>
-            </div><a class="btn btn--confirmation payment__toggler" href="#payment__header" data-toggle="collapse" data-target="#payment__info">Xác nhận</a>
+            </div><a class="btn btn--confirmation payment__toggler" href="#" data-toggle="collapse" data-target="#payment__info">Xác nhận</a>
           </div>
         </section>
         <section class="payment-wrapper">
@@ -166,7 +166,7 @@
                 <input class="guess__info--name form-control" type="text" placeholder="Họ tên">
                 <input class="guess__info--phone form-control" type="text" placeholder="Số điện thoại">
                 <input class="guess__info--address form-control" type="text" placeholder="Địa chỉ nhận hàng">
-                <textarea class="guess__info--note form-control" name="" cols="20" rows="10" placeholder="Ghi chú"></textarea>
+                <textarea class="guess__info--note form-control" name="" cols="20" rows="5" placeholder="Ghi chú"></textarea>
               </form><a class="btn btn--confirmation payment__toggler" href="#method-wrapper" data-toggle="collapse" data-target="#payment__method">Xác nhận </a>
             </div>
             <div class="sub-section collapse" id="payment__method">
@@ -263,7 +263,7 @@
         </section>
       </div>
     </main>
-    <footer class="dark-side"> 
+    <footer class="dark-side" id="footer"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
