--- a/halo/dslr-hub.html
+++ b/halo/dslr-hub.html
@@ -241,7 +241,7 @@
         </div>
       </div>
     </main>
-    <footer class="dark-side"> 
+    <footer class="dark-side" id="footer"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
