--- a/halo/payment.html
+++ b/halo/payment.html
@@ -256,6 +256,10 @@
                       </form>
                     </div>
                   </div>
+                  <div class="method__toggler" data-toggle="collapse" data-target="#cod"> 
+                    <input type="radio" name="payment-method" id="cod-radio" form="methods-selection">
+                    <label for="cod-radio">Thanh toán khi nhận hàng (COD)</label>
+                  </div><a class="method__content collapse btn btn--confirmation payment__toggler" id="cod" href="#" data-parent="#methods-selection">Xác nhận</a>
                 </div>
               </form>
             </div>
@@ -278,6 +282,7 @@
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
