--- a/halo/parts/header.html
+++ b/halo/parts/header.html
@@ -12,7 +12,7 @@
           <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Máy ảnh</a></li>
           <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Ống kính</a></li>
           <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Phụ kiện</a></li>
-          <li class="nav-item"><a class="nav-link py-3 px-md-3" href="review-hub.html">Đánh giá</a></li>
+          <li class="nav-item"><a class="nav-link py-3 px-md-3" href="review.html">Đánh giá</a></li>
           <li class="nav-item display-till-md log-min"><a class="nav-link py-3" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a></li>
         </ul>
       </div>
