--- a/halo/review.html
+++ b/halo/review.html
@@ -82,6 +82,8 @@
           </div>
         </div>
       </div>
+      <div class="review__main-banner"></div>
+      <section class="review__sub-banner"> <a></a></section>
     </main>
     <footer class="dark-side" id="footer"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
