--- a/halo/checkout.html
+++ b/halo/checkout.html
@@ -82,8 +82,26 @@
           </div>
         </div>
       </div>
-      <div class="review__main-banner"></div>
-      <section class="review__sub-banner"> <a></a></section>
+      <div class="page-wrapper container-xl">
+        <div class="success-alert"><img class="success-img" src="img/img--checkout/success.png" alt=""><span>Tuyệt vời! </span></div>
+        <p class="success-thank">Cảm ơn quý khách đã ủng hộ HALO </p>
+        <div class="checkout-box mx-auto">
+          <h1 class="checkout-box__header">Thông tin đơn hàng </h1>
+          <div class="inner-row"><span class="checkout-box__inner-header">Mã đơn hàng</span><span>123456789</span></div>
+          <div class="inner-row"><span class="checkout-box__inner-header">Thời điểm xác nhận: </span><span>01/04/2021 00:00</span></div>
+          <div class="inner-row"><span class="checkout-box__inner-header">Giỏ hàng: </span></div>
+          <div class="inner-row inner-row--item"><span>Máy ảnh Canon 1DX Mark III </span><span>1 x 130.090.000 đ = 130.090.000 đ</span></div>
+          <div class="inner-row inner-row--item"><span>Máy ảnh Canon 1DX Mark III </span><span>1 x 130.090.000 đ = 130.090.000 đ</span></div>
+          <div class="inner-row"><span>Tổng giá trị giỏ hàng</span><span>390.270.000đ</span></div>
+          <div class="inner-row"><span class="checkout-box__inner-header">Thông tin khách hàng:</span></div>
+          <div class="inner-row inner-row--item"><span>Họ tên: </span><span>Nguyễn Trung Đức</span></div>
+          <div class="inner-row inner-row--item"><span>Địa chỉ nhận hàng:</span><span>Số x, phố Y, Hà Nội</span></div>
+          <div class="inner-row"><span>Số điện thoại: </span><span>099.999.9999</span></div>
+          <div class="inner-row"><span class="checkout-box__inner-header">Thời điểm giao hàng dự kiến:</span><span>03/04/2021 00:00</span></div>
+          <div class="inner-row"><span class="checkout-box__inner-header">Thanh toán:</span><span>Đã thanh toán bằng thẻ VISA lúc 01/04/2021 00:00</span></div>
+          <div class="hotline"><span class="checkout-box__inner-header">Tổng đài hỗ trợ 24/07: </span><span>0xx.xxx.xxxx   </span></div>
+        </div>
+      </div>
     </main>
     <footer class="dark-side" id="footer"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
