--- a/halo/review.html
+++ b/halo/review.html
@@ -82,8 +82,30 @@
           </div>
         </div>
       </div>
-      <div class="review__main-banner"></div>
-      <section class="review__sub-banner"> <a></a></section>
+      <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt=""><img class="main-banner__text" src="img/img--review/banner-text.png" alt=""></div>
+      <section>
+        <div class="carousel slide display-till-md" id="sub-banner-area--min" data-ride="carousel" data-touch="true">
+          <ul class="carousel-indicators">
+            <li class="active" data-target="#sub-banner-area--min" data-slide-to="0"></li>
+            <li data-target="#sub-banner-area--min" data-slide-to="1"></li>
+            <li data-target="#sub-banner-area--min" data-slide-to="2"></li>
+          </ul>
+          <div class="carousel-inner">
+            <div class="carousel-item active"><img src="/halo/img/img--review/sub-banner-big--min.jpg" alt="">
+              <div class="carousel-caption">
+                <h3>Nikon Z7 Review: </h3>
+                <p>Canh bạc cho tương lai của Nikon</p>
+              </div>
+            </div>
+            <div class="carousel-item"><img src="img/img--review/review-sub-banner-1.png" alt=""></div>
+            <div class="carousel-item"><img src="img/img--review/review-sub-banner-2.png" alt=""></div>
+          </div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+        </div>
+      </section>
+      <section class="hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="#"><span>Nikon Z7 Review: </span><span>Canh bạc cho tương lai của Nikon</span></a><a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-2.png" alt=""></a></section>
+      <section class="review__sub-banner-area review hidden-till-md"><a class="review__sub-banner--big" href="#"><span>Nikon Z7 Review: </span><span>Canh bạc cho tương lai của Nikon</span></a>
+        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-2.png" alt=""></a></div>
+      </section>
     </main>
     <footer class="dark-side" id="footer"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
