--- a/halo/index.html
+++ b/halo/index.html
@@ -166,7 +166,7 @@
               </div>
               <div class="carousel-caption__img display-till-md"></div>
             </div>
-          </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/img--misc/prev-arrow-xs-v2.png"></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/img--misc/next-arrow-xs-v2.png"></a>
+          </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/img--misc/prev-arrow-xs-v3.png"></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/img--misc/next-arrow-xs-v3.png"></a>
         </div>
       </div>
       <section class="intro intro--camera">
@@ -245,25 +245,24 @@
         </div>
       </section>
       <section class="review dark-side">
-        <div class="container-xl px-sm-5 px-xl-0 mw-900">
-          <h1>HALO review</h1><a class="review-item d-flex" href=""><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
-            <div class="review-item__content w-100 d-flex flex-column justify-content-between">
+        <div class="container-xl px-sm-5 mw-900">
+          <h1>HALO review</h1><a class="review-item d-flex" href="review.html"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
+            <div class="review-item__content d-flex flex-column justify-content-between">
               <div class="review-header d-flex flex-wrap align-items-start align-content-start">
-                <h2 class="w-100">Top 5 DSLR đáng mua năm 2021</h2>
+                <h2 class="w-100 font-weight-bold">Top 5 DSLR đáng mua năm 2021</h2>
                 <p class="subtext font-italic font-weight-light">Trung Đức</p>
-                <p class="subtext font-italic font-weight-light"><i class="far fa-clock mx-1 mx-sm-2"> </i>01/01/2021</p>
+                <p class="subtext font-italic font-weight-light"><i class="far fa-clock mx-2"></i>01/01/2021</p>
               </div>
-              <p class="review-preview hidden-till-sm">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
-            </div></a><a class="review-item d-flex" href="#"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
-            <div class="review-item__content w-100 d-flex flex-column justify-content-between">
+              <p class="review-preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
+            </div></a><a class="review-item d-flex" href="review.html"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
+            <div class="review-item__content d-flex flex-column justify-content-between">
               <div class="review-header d-flex flex-wrap align-items-start align-content-start">
-                <h2 class="w-100">Top 5 DSLR đáng mua năm 2021</h2>
+                <h2 class="w-100 font-weight-bold">Top 5 DSLR đáng mua năm 2021</h2>
                 <p class="subtext font-italic font-weight-light">Trung Đức</p>
-                <p class="subtext font-italic font-weight-light"> <i class="far fa-clock mx-1 mx-sm-2"> </i>01/01/2021</p>
+                <p class="subtext font-italic font-weight-light"> <i class="far fa-clock mx-2"></i>01/01/2021</p>
               </div>
-              <p class="review-preview hidden-till-sm">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
-            </div></a>
-          <button class="btn btn--light seemore-btn mx-auto" type="button">Xem thêm        </button>
+              <p class="review-preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
+            </div></a><a class="btn btn--light seemore-btn mx-auto" href="review.html">Xem thêm        </a>
         </div>
       </section>
       <section class="connection">
@@ -274,7 +273,7 @@
             <button class="btn connection__submit-btn btn-primary font-italic">Gửi</button>
           </form>
           <p class="connection__text text-center">Hoặc theo dõi chúng tôi tại</p>
-          <div class="connection__socials d-flex justify-content-between mx-auto"><a class="socials__item d-block" href="#"><img src="img/img--misc/social-fb.png" alt=""></a><a class="socials__item d-block" href="#"><img src="img/img--misc/social-insta.png" alt=""></a><a class="socials__item d-block" href="#"><img src="img/img--misc/social-twitter.png" alt=""></a></div>
+          <div class="connection__socials d-flex justify-content-between mx-auto"><a class="socials__item d-block" href="#"><img src="img/img--misc/social-fb.png" alt=""></a><a class="socials__item d-block" href="#"><img src="img/img--misc/social-insta.png" alt=""></a><a class="socials__item d-block" href="#"><img class="h-100" src="img/img--misc/social-twitter.png" alt=""></a></div>
         </div>
       </section>
     </main>
