--- a/halo/review.html
+++ b/halo/review.html
@@ -83,8 +83,8 @@
         </div>
       </div>
       <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt=""><img class="main-banner__text" src="img/img--review/banner-text.png" alt=""></div>
-      <section>
-        <div class="carousel slide display-till-md" id="sub-banner-area--min" data-ride="carousel" data-touch="true">
+      <section class="display-till-md">
+        <div class="carousel slide" id="sub-banner-area--min" data-ride="carousel" data-touch="true">
           <ul class="carousel-indicators">
             <li class="active" data-target="#sub-banner-area--min" data-slide-to="0"></li>
             <li data-target="#sub-banner-area--min" data-slide-to="1"></li>
@@ -93,7 +93,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active"><img src="/halo/img/img--review/sub-banner-big--min.jpg" alt="">
               <div class="carousel-caption">
-                <h3>Nikon Z7 Review: </h3>
+                <h3>Nikon Z7 Review:&nbsp; </h3>
                 <p>Canh bạc cho tương lai của Nikon</p>
               </div>
             </div>
@@ -102,9 +102,34 @@
           </div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
         </div>
       </section>
-      <section class="hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="#"><span>Nikon Z7 Review: </span><span>Canh bạc cho tương lai của Nikon</span></a><a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-2.png" alt=""></a></section>
-      <section class="review__sub-banner-area review hidden-till-md"><a class="review__sub-banner--big" href="#"><span>Nikon Z7 Review: </span><span>Canh bạc cho tương lai của Nikon</span></a>
+      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="#"><span>Nikon Z7 Review: </span><span>Canh bạc cho tương lai của Nikon</span></a>
         <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-2.png" alt=""></a></div>
+      </section>
+      <section class="main-area container-xl">
+        <div class="review__post-area"><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
+            <div class="review__post--content"> 
+              <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
+              <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
+              <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
+            </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
+            <div class="review__post--content"> 
+              <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
+              <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
+              <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
+            </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
+            <div class="review__post--content"> 
+              <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
+              <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
+              <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
+            </div></a>
+          <button class="btn seemore-btn btn--dark">Xem thêm</button>
+        </div>
+        <aside class="review__aside-area hidden-till-md">
+          <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a>
+        </aside>
       </section>
     </main>
     <footer class="dark-side" id="footer"> 
